# uinputdev

./: configure.ac
src/: Makefile.am  uinputdev.c
